# 18h-krang-utils

./: .gitignore  CMakeLists.txt  ESO.hpp  README.md  adrc.cpp  adrc.hpp  balance.cpp  balance.hpp  collision.cpp  collision.hpp  lqr.cpp  lqr.hpp  random.cpp
include/: adrc.hpp  eso.hpp  krang-utils.hpp
include/krang-utils/: adrc.hpp  balance.hpp  convert_pose_formats.hpp  eso.hpp  file_ops.hpp  linearize_wip.hpp  random.hpp
lqr/: mylqr.m
src/: adrc.cpp  balance.cpp  convert_pose_formats.cpp  file_ops.cpp  linearize_wip.cpp  lqr.cpp
